--- a/ToolshopApp2/View/UserControlers/TaskWindow/ShipmentTaskUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/TaskWindow/ShipmentTaskUserControl.xaml
@@ -19,25 +19,22 @@
         <Label Content="Insurance Cost [EUR]: " HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1" Height="26" Width="126"/>
         <Label Content="Contact_Person:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White" Height="26" Width="89"/>
         <Label Content="Email Address:" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" Width="181" Foreground="White" Height="26"/>
-
+        
+        <ComboBox x:Name="_ComboBoxContactPerson" Margin="10,41,25,0" VerticalAlignment="Top" IsEditable="True" Height="26" SelectionChanged="_ComboBoxContactPerson_SelectionChanged" />
+        <TextBox x:Name="_TextBoxEmail" Height="26" Margin="10,99,25,0" TextWrapping="Wrap" VerticalAlignment="Top" MaxLines="1" MaxLength="200"/>
+        <TextBox x:Name="_TextBoxAdress" Margin="10,134,25,51" TextWrapping="Wrap" Text="Address" AcceptsReturn="True" MaxLines="20" MaxLength="5000"/>
+        <Button x:Name="_ButtonAddAdress" Content="Add Adress" HorizontalAlignment="Left" Margin="10,0,0,10" Width="101"  Height="26" VerticalAlignment="Bottom" Click="_ButtonAddAdress_Click"/>
+        <Button x:Name="_ButtonClearAdress" Content="Clear Adress" HorizontalAlignment="Left" Margin="116,0,0,10" Width="101"  Height="26" VerticalAlignment="Bottom" Click="_ButtonClearAdress_Click"/>
+        <TextBox x:Name="_TextBoxSrzBegin" Height="26" Margin="109,37,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" MaxLines="1" MaxLength="5" TextChanged="_TextBox_TextChanged" />
+        <TextBox x:Name="_TextBoxSrzEnd" Height="26" Margin="109,68,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" MaxLines="1" MaxLength="5" />        
         <ComboBox x:Name="_ComboBoxTransport" Margin="109,99,10,0" VerticalAlignment="Top" Height="26" SelectedIndex="1" Grid.Column="1">
             <ComboBoxItem Content="Ekspress" HorizontalAlignment="Left" Width="108"/>
             <ComboBoxItem Content="Standard" HorizontalAlignment="Left" Width="108"/>
         </ComboBox>
-        <ComboBox x:Name="_ComboBoxContactPerson" Margin="10,41,25,0" VerticalAlignment="Top" IsEditable="True" Height="26" />
-
-        <CheckBox x:Name="_ComboBoxInsurance" Content="CheckBox" HorizontalAlignment="Left" Margin="109,139,0,0" VerticalAlignment="Top" Width="22" Height="22" RenderTransformOrigin="-0.727,0.545"  Grid.Column="1"/>
-
-        <TextBox x:Name="_TextBoxSrzBegin" Height="26" Margin="109,37,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" MaxLines="1" MaxLength="5" />
-        <TextBox x:Name="_TextBoxSrzEnd" Height="26" Margin="109,68,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" MaxLines="1" MaxLength="5" />
+        <CheckBox x:Name="_ComboBoxInsurance" Content="CheckBox" HorizontalAlignment="Left" Margin="109,139,0,0" VerticalAlignment="Top" Width="22" Height="22" RenderTransformOrigin="-0.727,0.545"  Grid.Column="1" Unchecked="_ComboBoxInsurance_Unchecked" Checked="_ComboBoxInsurance_Checked"/>
         <TextBox x:Name="_TextBoxInsuranceCost" Height="23" Margin="141,168,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsEnabled="False" Grid.Column="1" MaxLines="1" MaxLength="13"/>
-        <TextBox x:Name="_TextBoxAdress" Margin="10,134,25,51" TextWrapping="Wrap" Text="Address" AcceptsReturn="True" MaxLines="20" MaxLength="5000"/>
-        <TextBox x:Name="_TextBoxEmail" Height="26" Margin="10,99,25,0" TextWrapping="Wrap" VerticalAlignment="Top" MaxLines="1" MaxLength="200"/>
-
-        <Button x:Name="_ButtonPorcia" Content="Porcia" Margin="10,196,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" />
-        <Button x:Name="_ButtonStockholm" Content="Stockholm" Margin="10,258,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" />
-        <Button x:Name="_ButtonSolaro" Content="Solaro" Margin="10,227,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" />
-        <Button x:Name="_ButtonClearAdress" Content="Clear Adress" HorizontalAlignment="Left" Margin="116,0,0,10" Width="101"  Height="26" VerticalAlignment="Bottom"/>
-        <Button x:Name="_ButtonAddAdress" Content="Add Adress" HorizontalAlignment="Left" Margin="10,0,0,10" Width="101"  Height="26" VerticalAlignment="Bottom"/>
+        <Button x:Name="_ButtonPorcia" Content="Porcia" Margin="10,196,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" Click="_ButtonPorcia_Click" />
+        <Button x:Name="_ButtonSolaro" Content="Solaro" Margin="10,227,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" Click="_ButtonSolaro_Click" />
+        <Button x:Name="_ButtonStockholm" Content="Stockholm" Margin="10,258,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" HorizontalAlignment="Left" Width="86" Click="_ButtonStockholm_Click" />
     </Grid>
 </UserControl>
