--- a/ToolshopApp2/View/UserControlers/TaskWindow/SimpleTaskUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/TaskWindow/SimpleTaskUserControl.xaml
@@ -12,39 +12,16 @@
         <Label Content="Cost Center:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="138" Foreground="White"/>
         <Label Content="Dead Line:" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="138" Foreground="White"/>
         <Label Content="Task description:" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="138" Foreground="White"/>
-
-        <ComboBox x:Name="_ComboBoxProject" Margin="153,41,119,0" VerticalAlignment="Top" Height="26" IsEditable="True" Grid.ColumnSpan="2"/>
-        <ComboBox x:Name="_ComboBoxCostCenter" Margin="153,103,119,0" VerticalAlignment="Top" Height="26" IsEditable="True" Grid.ColumnSpan="2"/>
-        <ComboBox x:Name="_ComboBoxClassyfy" Margin="153,14,119,0" VerticalAlignment="Top" SelectedIndex="0" Grid.ColumnSpan="2">
-            <ComboBox.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FFE5E5E5" Offset="1"/>
-                </LinearGradientBrush>
-            </ComboBox.Background>
-            <ComboBoxItem Content="Cost out" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Quality improvement" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="new PD project" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="R&amp;D Lab support" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="PL samples" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="factory support" HorizontalAlignment="Left" Width="427"/>
-        </ComboBox>
-        <ComboBox x:Name="_ComboboxTask" Margin="153,72,10,0" VerticalAlignment="Top" Height="26" SelectedIndex="0" Grid.ColumnSpan="2" SelectionChanged="_ComboboxTask_SelectionChanged">
-            <ComboBoxItem Content="Rework" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Build a Sample" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Pre-series" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Move the Dishwasher" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Milling" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Shipping Dishwasher" HorizontalAlignment="Left" Width="427"/>
-            <ComboBoxItem Content="Shipping Components" HorizontalAlignment="Left" Width="427"/>
-        </ComboBox>
-
-        <Button x:Name="_ButtonAddProject" Content="Add Project" HorizontalAlignment="Right" Margin="0,41,10,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="1"/>
-        <Button x:Name="_ButtonAddCostCenter" Content="Add CC" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="1"/>
-
-        <DatePicker x:Name="_DatePickerDeadline" Margin="153,134,10,0" VerticalAlignment="Top" Height="26" FirstDayOfWeek="Monday" SelectedDateFormat="Short" Grid.ColumnSpan="2" SelectedDateChanged="_DatePickerDeadlineSelectedDateChanged"/>
-
-        <TextBox x:Name="_TextBoxDescription" Margin="10,196,9.8,10" TextWrapping="Wrap" SpellCheck.IsEnabled="True" AcceptsReturn="True" Background="#FFECECEC" Text="Task description" MaxLines="50" MaxLength="2000" VerticalScrollBarVisibility="Auto"/>
         <TextBox x:Name="_TextBoxId" Grid.Column="1" Height="22" Margin="0,14,10,0" TextWrapping="Wrap" Text="ID" VerticalAlignment="Top" IsEnabled="False" HorizontalAlignment="Right" Width="104"/>
+
+        <ComboBox x:Name="_ComboBoxClassyfy" Margin="153,14,119,0" VerticalAlignment="Top" SelectedIndex="0" Grid.ColumnSpan="2"/>
+        <ComboBox x:Name="_ComboBoxProject" Margin="153,41,119,0" VerticalAlignment="Top" Height="26" IsEditable="True" Grid.ColumnSpan="2"/>
+        <Button x:Name="_ButtonAddProject" Content="Add Project" Click="_ButtonAddProjectClick" HorizontalAlignment="Right" Margin="0,41,10,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="1"/>
+        <ComboBox x:Name="_ComboboxTask" Margin="153,72,10,0" VerticalAlignment="Top" Height="26" SelectedIndex="0" Grid.ColumnSpan="2" SelectionChanged="_ComboboxTask_SelectionChanged"/>
+        <ComboBox x:Name="_ComboBoxCostCenter" Margin="153,103,119,0" VerticalAlignment="Top" Height="26" IsEditable="True" Grid.ColumnSpan="2"/>
+        <Button x:Name="_ButtonAddCostCenter" Content="Add CC" Click="_ButtonAddCostCenterClick" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="104" Height="26" Grid.Column="1"/>
+        <DatePicker x:Name="_DatePickerDeadline" Margin="153,134,10,0" VerticalAlignment="Top" Height="26" FirstDayOfWeek="Monday" SelectedDateFormat="Short" Grid.ColumnSpan="2" SelectedDateChanged="_DatePickerDeadlineSelectedDateChanged" />
+        <TextBox x:Name="_TextBoxDescription" Margin="10,196,9.8,10" TextWrapping="Wrap" SpellCheck.IsEnabled="True" AcceptsReturn="True" Background="#FFECECEC" Text="Task description" MaxLines="50" MaxLength="2000" VerticalScrollBarVisibility="Auto"/>
+        
     </Grid>
 </UserControl>
